tests/valid/RealDiv_Valid_1.whiley
real g(int x):
     return x / 3.0

string f(int x, int y):
    return str(g(x))

void main([string] args):
     println(f(1,2))
